# worktrack-app

./: .gitignore  README.md  package-lock.json  package.json  sp_notes  tsconfig.node.json  tsconfig.web.json
apps/api/: README.md  openapi.json  pyproject.toml  run.sh
apps/api/scripts/: export_openapi.py
apps/api/src/worktrace_api/: __init__.py  database.py  main.py  privacy.py  processing.py  recordings.py  repository.py  schemas.py  services.py  settings.py
apps/api/src/worktrace_api/tasks/: transcription.py
apps/api/tests/: conftest.py  test_api.py  test_openapi.py  test_privacy.py  test_recordings.py  test_services.py  test_settings.py
apps/desktop/: electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
apps/desktop/main/: index.ts
apps/desktop/main/api/: WorkTraceApiClient.ts
apps/desktop/main/recording/: InputEventService.ts  RecordingControlsWindow.ts  RecordingManager.ts  ScreenCaptureService.ts  SessionWriter.ts  registerRecordingIpc.ts
apps/desktop/preload/: index.ts
apps/desktop/scripts/: dev.cjs
apps/desktop/shared/: recording.ts
apps/desktop/src/: App.tsx  env.d.ts  index.css
apps/desktop/src/components/: AppShell.tsx  RecorderCard.tsx  StatCard.tsx  StepProgress.tsx
apps/desktop/src/pages/: DashboardPage.tsx  PlaceholderPage.tsx  SessionsPage.tsx  (+1 more)
main/: index.ts
main/recording/: RecordingManager.ts  ScreenCaptureService.ts
preload/: index.ts
src/: App.tsx  env.d.ts  index.css  index.html
src/components/: RecorderCard.tsx
src/features/recording/: useRecording.ts
(+1 files in other folders)
