[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worktrace-api"
version = "0.1.0"
description = "Tenant-isolated API for the WorkTrace AI prototype"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "fastapi>=0.115,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
